examples/test/testpolicy11581.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11581
  namespace: namespace212
spec:
  podSelector:
    matchLabels:
      key38: value25
      key43: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value33
          key29: value38
          key39: value11
      podSelector:
        matchLabels:
          key1: value19
          key6: value35
          key25: value3
